Lift texture's MAX_LEVEL/BASE_LEVEL workaround on OSX 10.12.2+ with AMD GPU.

The driver has been fixed in 10.12.2

BUG=610153
TEST=
TBR=kbr@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2594253002
Cr-Commit-Position: refs/heads/master@{#440319}

Former-commit-id: 2347b6c10bbe0810aa8eb3ceb8bf583ff74a9dd8